feat(vault-binary): create downlad bynary file view and handler
