# docs/swagger.json
@@ -412,6 +412,58 @@
                     }
                 }
             }
+        },
+        "/vault/binary/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get binary file URL",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vault"
+                ],
+                "summary": "Get binary file URL",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Binary ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -514,6 +566,9 @@
         "models.VaultBinaryItemUploadRes": {
             "type": "object",
             "properties": {
+                "item": {
+                    "$ref": "#/definitions/models.VaultItem"
+                },
                 "path": {
                     "type": "string"
                 },
